--- a/client/index.html
+++ b/client/index.html
@@ -10,5 +10,10 @@
 </head>
 <body>
     <h1>UniFlow: Work in Progress</h1>
+    <form>
+        <input type="email">
+        <input type="password">
+        <input type="submit">
+    </form>
 </body>
 </html>
