--- a/client/index.html
+++ b/client/index.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>UniFlow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
-    <script src="index.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="/css/index.css" /> -->
+    <script src="/js/jquery-3.3.1.min.js"></script>
+    <script src="/js/index.js"></script>
 </head>
 <body>
     <h1>UniFlow: Work in Progress</h1>
     <form>
-        <input type="email">
-        <input type="password">
-        <input type="submit">
+        <input class="user" name="user" type="text">
+        <input class="password" name="password" type="password">
+        <input class="submit-btn" type="button" value="Submit">
     </form>
+    <div>
+        <p class="result">
+        </p>
+    </div>
 </body>
 </html>
