added additem function

--- a/client/index.html
+++ b/client/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <h1>UniFlow: Work in Progress</h1>
-    <form>
+    <form class="form">
         <input class="user" name="user" type="text">
         <input class="password" name="password" type="password">
-        <input class="submit-btn" type="button" value="Submit">
+        <input class="submit-btn" type="submit" value="Submit">
     </form>
     <div>
         <p class="result">
