minor fixes to the homepage

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
         <input class="password" name="password" type="password">
         <input class="submit-btn" type="submit" value="Submit">
     </form>
+    <a href="homepage.html">Home</a>
     <div>
         <p class="result">
         </p>
