--- a/client/homepage.html
+++ b/client/homepage.html
@@ -7,14 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <title>Blog Home - Start Bootstrap Template</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/blog-home.css" rel="stylesheet">
+    <title>UniFlow HomePage</title>
+    <script src="/js/jquery-3.3.1.min.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/homepage.js"></script>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/homepage.css" rel="stylesheet">
 
   </head>
 
@@ -48,23 +46,14 @@
       </div>
     </nav>
 
-    <!-- Page Content -->
     <div class="container">
-
       <div class="row">
-
-        <!-- Blog Entries Column -->
         <div class="row-md-5">
-
-          <h1 class="my-4">Courses
-          <!--  <small>Secondary Text</small> -->
-          </h1>
-
-          <!-- Blog Post -->
+          <!-- <h1 class="my-4">Courses</h1>
           <div class="card mb-4">
-            <img class="card-img-top" src="notClickbait.jpg" alt="Card image cap">
+            <img class="card-img-top" src="img/notClickbait.jpg" alt="Card image cap">
             <div class="card-body">
-              <h2 class="card-title">Intro to the Art of Clickbait	</h2>
+              <h2 class="card-title">Intro to the Art of Clickbait</h2>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
               <a href="#" class="btn btn-primary">Read More &rarr;</a>
             </div>
@@ -72,52 +61,19 @@
               Posted on February 2, 2020 by
               <a href="#">s1337420</a>
             </div>
-          </div>
-
-          <!-- Blog Post -->
-       <!--   <div class="card mb-2">
-            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-            <div class="card-body">
-              <h2 class="card-title">Intro to React</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-              <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-              Posted on January 1, 2017 by
-              <a href="#">Start Bootstrap</a>
-            </div>
           </div> -->
-
-          <!-- Blog Post -->
-        <!--  <div class="card mb-4">
-            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-            <div class="card-body">
-              <h2 class="card-title">Intro to All Nighters</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-              <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-              Posted on January 1, 2017 by
-              <a href="#">Start Bootstrap</a>
-            </div>
-          </div> -->
-		  <h1 class="my-4"><u>Subscribed Courses and Threads</u> 
-          <!--  <small>Secondary Text</small> -->
-          </h1>
+		  <h1 class="my-4"><u>Subscribed Threads</u></h1>
 		  <ul>
 		  <li><big><font color="blue"><u>Why drink red bulls?</font></u></big></li>
 		  <li><big><font color="blue"><u>How to react to learning react?</font></u></big></li>
 		  </ul>
 
 		  <h1 class="my-4"><u>Most Viewed</u>
-          <!--  <small>Secondary Text</small> -->
           </h1>
 		  <ul>
 		  <li><big><font color="blue"><u>Universities hate him! What he did to get a job was insane!!!</font></u></big></li>
 		  <li><big><font color="blue"><u>You won't believe how easy it is to get POINTS?!?</font></u></big></li>
 		  </ul>
-
-          <!-- Pagination -->
           <ul class="pagination justify-content-center mb-4">
             <li class="page-item">
               <a class="page-link" href="#">&larr; Older</a>
@@ -126,91 +82,19 @@
               <a class="page-link" href="#">Newer &rarr;</a>
             </li>
           </ul>
-
-		  
-
         </div>
-
-
-        <!-- Sidebar Widgets Column -->
-     <!-- <div class="col-md-4"> -->
-
-          <!-- Search Widget -->
-        <!--    <div class="card my-4">
-            <h5 class="card-header">Search</h5>
-            <div class="card-body">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search for...">
-                <span class="input-group-btn">
-                  <button class="btn btn-secondary" type="button">Go!</button>
-                </span>
-              </div>
-            </div>
-          </div>  -->
-
-          <!-- Categories Widget -->
-   <!--       <div class="card my-4">
-            <h5 class="card-header">Categories</h5>
-            <div class="card-body">
-              <div class="row">
-                <div class="col-lg-6">
-                  <ul class="list-unstyled mb-0">
-                    <li>
-                      <a href="#">Web Design</a>
-                    </li>
-                    <li>
-                      <a href="#">HTML</a>
-                    </li>
-                    <li>
-                      <a href="#">Freebies</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-lg-6">
-                  <ul class="list-unstyled mb-0">
-                    <li>
-                      <a href="#">JavaScript</a>
-                    </li>
-                    <li>
-                      <a href="#">CSS</a>
-                    </li>
-                    <li>
-                      <a href="#">Tutorials</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>  -->
-
-          <!-- Side Widget -->
-       <!--   <div class="card my-4">
-            <h5 class="card-header">Side Widget</h5>
-            <div class="card-body">
-              You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
-            </div>
-          </div> -->
-
         </div>
 
       </div>
-      <!-- /.row -->
 
     </div>
-    <!-- /.container -->
-
-    <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; UniFlow 2018</p>
       </div>
-      <!-- /.container -->
     </footer>
 
-    <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
   </body>
-
 </html>
