added reqtype to requests

--- a/client/homepage.html
+++ b/client/homepage.html
@@ -63,7 +63,7 @@
             </div>
           </div> -->
 		  <h1 class="my-4"><u>Subscribed Threads</u></h1>
-		  <ul>
+		  <ul class="subbed">
 		  <li><big><font color="blue"><u>Why drink red bulls?</font></u></big></li>
 		  <li><big><font color="blue"><u>How to react to learning react?</font></u></big></li>
 		  </ul>
@@ -93,8 +93,5 @@
         <p class="m-0 text-center text-white">Copyright &copy; UniFlow 2018</p>
       </div>
     </footer>
-
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
