dynamically change homepage content

--- a/client/homepage.html
+++ b/client/homepage.html
@@ -64,15 +64,11 @@
           </div> -->
 		  <h1 class="my-4"><u>Subscribed Threads</u></h1>
 		  <ul class="subbed">
-		  <li><big><font color="blue"><u>Why drink red bulls?</font></u></big></li>
-		  <li><big><font color="blue"><u>How to react to learning react?</font></u></big></li>
 		  </ul>
 
 		  <h1 class="my-4"><u>Most Viewed</u>
           </h1>
-		  <ul>
-		  <li><big><font color="blue"><u>Universities hate him! What he did to get a job was insane!!!</font></u></big></li>
-		  <li><big><font color="blue"><u>You won't believe how easy it is to get POINTS?!?</font></u></big></li>
+		  <ul class="popular">
 		  </ul>
           <ul class="pagination justify-content-center mb-4">
             <li class="page-item">
