added ability to add to db

--- a/client/signup.html
+++ b/client/signup.html
@@ -3,25 +3,20 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>UniFlow</title>
+    <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="/css/index.css" /> -->
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
     <script src="/js/jquery-3.3.1.min.js"></script>
     <script src="/js/main.js"></script>
-    <script src="/js/index.js"></script>
+    <script src="js/signup.js"></script>
 </head>
 <body>
-    <h1>UniFlow: Work in Progress</h1>
     <form class="form">
         <input class="user" name="user" type="text">
         <input class="password" name="password" type="password">
+        <input class="fName" name="fName" type="text">
+        <input class="lName" name="lName" type="text">
         <input class="submit-btn" type="submit" value="Submit">
     </form>
-    <a href="homepage.html">Home</a>
-    <a href="signup.html">Signup</a>
-    <div>
-        <p class="result">
-        </p>
-    </div>
 </body>
 </html>
