--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
   <body id="page-top">
 
     <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
-
+    <img src="./img/logo.png" height="42" width="42" hspace="20">
       <a class="navbar-brand mr-1" href="index.html">UniFlow</a>
 
       <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
