--- a/client/Rewards.html
+++ b/client/Rewards.html
@@ -128,37 +128,41 @@
       <div class="row">
 
         <!-- Blog Entries Column -->
-        <div class="col-md-8">
+        <div class="col-md-12">
 
 
         <h1 class="text-center">Progress Page</h1>
           <!-- MY CODE -->
 
                 <h2 >Achievements - 200 points</h2>
-                <div class="col-md-12">
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
+                <div class="container">
+                  <div class="row">
+                      <div class="col-lg-3"><a href="#" ><img class="resize" style="padding-bottom:20px"src="./img/cup.jpeg" alt="Card image cap"/></a></div>
+                      <div class="col-lg-3"><a href="#" ><img class="resize" style="padding-bottom:20px"src="./img/cup.jpeg" alt="Card image cap"/></a></div>
+                      <div class="col-lg-3"><a href="#" ><img class="resize" style="padding-bottom:20px"src="./img/cup.jpeg" alt="Card image cap"/></a></div>
+                      <div class="col-lg-3"><a href="#" ><img class="resize" style="padding-bottom:20px"src="./img/cup.jpeg" alt="Card image cap"/></a></div>
+                  </div>
                 </div>
 
               <h2 > Current Rewards </h2>
-                <div class="col-md-12">
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-
+                <div class="container">
+                  <div class="row">
+                      <div class="col-lg-3"><a href="#" ><img class="resize" style="padding-bottom:20px"src="./img/cup.jpeg" alt="Card image cap"/></a></div>
+                      <div class="col-lg-3"><a href="#" ><img class="resize" style="padding-bottom:20px"src="./img/cup.jpeg" alt="Card image cap"/></a></div>
+                      <div class="col-lg-3"><a href="#" ><img class="resize" style="padding-bottom:20px"src="./img/cup.jpeg" alt="Card image cap"/></a></div>
+                      <div class="col-lg-3"><a href="#" ><img class="resize" style="padding-bottom:20px"src="./img/cup.jpeg" alt="Card image cap"/></a></div>
+                  </div>
                 </div>
 
 
               <h2 >Upcoming Rewards</h2>
-                <div class="col-md-12">
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-
+                 <div class="container">
+                  <div class="row">
+                      <div class="col-lg-3"><a href="#" ><img class="resize" style="padding-bottom:20px"src="./img/cup.jpeg" alt="Card image cap"/></a></div>
+                      <div class="col-lg-3"><a href="#" ><img class="resize" style="padding-bottom:20px"src="./img/cup.jpeg" alt="Card image cap"/></a></div>
+                      <div class="col-lg-3"><a href="#" ><img class="resize" style="padding-bottom:20px"src="./img/cup.jpeg" alt="Card image cap"/></a></div>
+                      <div class="col-lg-3"><a href="#" ><img class="resize" style="padding-bottom:20px"src="./img/cup.jpeg" alt="Card image cap"/></a></div>
+                  </div>
                 </div>
         
 
