tying front to back end

--- a/client/Question_Generator.html
+++ b/client/Question_Generator.html
@@ -22,6 +22,9 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin.css" rel="stylesheet">
+    <script src="/js/jquery-3.3.1.min.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/Question_Generator.js"></script>
 
   </head>
 
@@ -128,7 +131,7 @@
             
             <div class="card-body">
               <div class="input-group">
-                <input type="text" class="form-control" placeholder="Topic Title">
+                <input type="text" class="form-control title" placeholder="Topic Title">
 
                   <br><br><br>
   
@@ -136,7 +139,7 @@
               <div class="input-group">
                 <input type="text" class="form-control" placeholder="Content goes here">
                 <span class="input-group-btn">
-                  <button class="btn btn-secondary" type="button">Go!</button>
+                  <button class="btn btn-secondary submit" type="button">Go!</button>
                 </span>
               </div>
               </div>
@@ -207,10 +210,6 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin.min.js"></script>
-
-    <!-- Demo scripts for this page-->
-    <script src="js/demo/datatables-demo.js"></script>
-    <script src="js/demo/chart-area-demo.js"></script>
 
   </body>
 
