--- a/client/Rewards.html
+++ b/client/Rewards.html
@@ -136,28 +136,28 @@
 
                 <h2 >Achievements - 200 points</h2>
                 <div class="col-md-12">
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
+                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="img/cup.jpeg" alt="Card image cap"/></a>
+                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="img/cup.jpeg" alt="Card image cap"/></a>
+                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="img/cup.jpeg" alt="Card image cap"/></a>
+                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="img/cup.jpeg" alt="Card image cap"/></a>
                 </div>
 
               <h2 > Current Rewards </h2>
                 <div class="col-md-12">
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
+                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="img/cup.jpeg" alt="Card image cap"/></a>
+                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="img/cup.jpeg" alt="Card image cap"/></a>
+                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="img/cup.jpeg" alt="Card image cap"/></a>
+                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="img/cup.jpeg" alt="Card image cap"/></a>
 
                 </div>
 
 
               <h2 >Upcoming Rewards</h2>
                 <div class="col-md-12">
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
-                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="cup.jpeg" alt="Card image cap"/></a>
+                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="img/cup.jpeg" alt="Card image cap"/></a>
+                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="img/cup.jpeg" alt="Card image cap"/></a>
+                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="img/cup.jpeg" alt="Card image cap"/></a>
+                    <a href="#" ><img class="resize" style="padding-bottom:20px"src="img/cup.jpeg" alt="Card image cap"/></a>
 
                 </div>
         
